[package]
name = "crdt"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.52", features = ["derive"] }
crossterm = "0.29.0"
kameo = "0.19.2"
serde = "1.0.228"
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "sync"] }
type-set = "0.3.2"
yrs = { version = "0.24.0", features = ["sync"] }
zenoh = "1.6.2"
