[package]
name = "crdt"
version = "0.1.0"
edition = "2024"
default-run = "crdt"

[dependencies]
clap = { version = "4.5.52", features = ["derive"] }
crossterm = { version = "0.29.0", features = ["event-stream"] }
futures-util = "0.3"
kameo = { version = "0.19.2", features = ["remote"] }
serde = "1.0.228"
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "sync", "io-std", "io-util"] }
type-set = "0.3.2"
yrs = { version = "0.24.0", features = ["sync"] }
[[bin]]
name = "chat2"
path = "tests/bin/chat.rs"
